--- a/jade/templates/_mixins.jade
+++ b/jade/templates/_mixins.jade
@@ -12,7 +12,7 @@ mixin logo-block(param)
     if (param.buy === true)
       .buy
         span
-          | buy
+          | buy&nbsp;
         span.mobile
           | now
 
