--- a/jade/templates/index/_section-info-index.jade
+++ b/jade/templates/index/_section-info-index.jade
@@ -20,7 +20,7 @@ section.info
         .copyright
           | © | 2018
         .logo
-          +logo-svgspan
+          +logo-svg
         .slogan
           | Readymade solutions
         .slogan
