--- a/jade/templates/product/_section-hero-product.jade
+++ b/jade/templates/product/_section-hero-product.jade
@@ -13,7 +13,7 @@ section.hero
       .dropdown.price-item.price-mid
         .text
           | domain + logo concept
-        .icon
+        img.icon(src="img/down.svg")
         .option-box
           .option
             | domain
