--- a/sass/partials/_components.sass
+++ b/sass/partials/_components.sass
@@ -56,9 +56,7 @@
   +m(home)
     width: 12.5rem
     height: 12.5rem
-    circle,
-    line,
-    polyline
+    line
       fill: $white
   +m(product)
     width: 12.5rem
