--- a/sass/partials/_index.sass
+++ b/sass/partials/_index.sass
@@ -48,7 +48,7 @@
 
     form
       margin-top: 11rem
-      font-size: 10px
+      font-size: 8px
       width: 80em
       +max(991)
         font-size: 8px
@@ -100,6 +100,7 @@
         padding-bottom: 0.1em
         width: 100%
         border-radius: 50px
+        background: #fff
 
         &::selection
           background: $blue
@@ -115,7 +116,7 @@
             color: transparent
 
       button
-        +button($p: 0.7em 3em 0.8em, $fz: 2em)
+        +button($p: 0.7em 2em 0.8em, $fz: 2em)
 
   .info
     background: $blue
@@ -185,6 +186,7 @@
     .logo
       margin-top: 1rem
       margin-bottom: 1rem
+      opacity: .7
       path
         fill: $white
 
