--- a/jade/templates/product/_section-hero-product.jade
+++ b/jade/templates/product/_section-hero-product.jade
@@ -6,7 +6,8 @@ section.hero
         span.dn-sm
           | Welcome to&nbsp;
         strong
-          | xtery.com&nbsp;
+          | xtery.com&nbsp;#{Test1}
+
       .bottom-part
         | this domain and logo are for sale
     .price-row
