--- a/jade/templates/product/_section-slider-product.jade
+++ b/jade/templates/product/_section-slider-product.jade
@@ -3,14 +3,23 @@ section.slider
     .glide__track(data-glide-el='track')
       ul.glide__slides
         li.glide__slide
-          img(src="img/slider.png")
-        li.glide__slide
-          img(src="img/slider.png")
-        li.glide__slide
-          img(src="img/slider.png")
-        li.glide__slide
-          img(src="img/slider.png")
-      .glide__bullets(data-glide-el='controls[nav]')
+          picture
+            source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
+            img(src='img/slider-desktop.png')
+
+        //li.glide__slide
+          picture
+            source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
+            img(src='img/slider-desktop.png')
+        //li.glide__slide
+          picture
+            source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
+            img(src='img/slider-desktop.png')
+        //li.glide__slide
+          picture
+            source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
+            img(src='img/slider-desktop.png')
+      //.glide__bullets(data-glide-el='controls[nav]')
         button.glide__bullet(data-glide-dir='=0')
         button.glide__bullet(data-glide-dir='=1')
         button.glide__bullet(data-glide-dir='=2')
