--- a/jade/templates/product/_section-slider-product.jade
+++ b/jade/templates/product/_section-slider-product.jade
@@ -7,19 +7,19 @@ section.slider
             source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
             img(src='img/slider-desktop.png')
 
-        //li.glide__slide
+        li.glide__slide
           picture
             source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
             img(src='img/slider-desktop.png')
-        //li.glide__slide
+        li.glide__slide
           picture
             source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
             img(src='img/slider-desktop.png')
-        //li.glide__slide
+        li.glide__slide
           picture
             source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
             img(src='img/slider-desktop.png')
-      //.glide__bullets(data-glide-el='controls[nav]')
+      .glide__bullets(data-glide-el='controls[nav]')
         button.glide__bullet(data-glide-dir='=0')
         button.glide__bullet(data-glide-dir='=1')
         button.glide__bullet(data-glide-dir='=2')
