--- a/jade/index.jade
+++ b/jade/index.jade
@@ -11,4 +11,4 @@ block main
     include templates/index/_section-info-index
 
 block scripts-bottom
-  script(src="js/index.js")
+  script(src="/js/index.js")
