--- a/jade/templates/index/_section-hero-index.jade
+++ b/jade/templates/index/_section-hero-index.jade
@@ -1,5 +1,5 @@
 section.hero
-  +logo-block({style: 'logo-block--dark', mail: true})
+  +logo-block()(style='logo-block--dark', mail=1)
   h1.title
     | We are into domains in a different way.
   form
