--- a/jade/templates/index/_section-info-index.jade
+++ b/jade/templates/index/_section-info-index.jade
@@ -28,4 +28,4 @@ section.info
       .column-right
         +arrow-svg('home')
 
-  +logo-block({style: 'logo-block--light', mail: true})
+  +logo-block()(style='logo-block--light', mail=1)
