--- a/jade/templates/product/_section-tags-product.jade
+++ b/jade/templates/product/_section-tags-product.jade
@@ -2,19 +2,8 @@ section.tags
   .tag-row
     label.label
       | Keywords:
-    .tag
-      | xtery
-    .tag
-      | neologism
-    .tag
-      | crypto
-    .tag
-      | domain
-    .tag
-      | x
-    .tag
-      | connection
-    .tag
-      | nodes
+    each val in tags
+      .tag
+        | #{val}
     .tag.more
       | 31 more
