--- a/jade/templates/_layout.jade
+++ b/jade/templates/_layout.jade
@@ -8,7 +8,7 @@ html(lang="en")
     title into.domains | #{pageTitle}
     meta(name='description', content='Domains are cool.')
     link(rel='icon', type='image/x-icon', href='favicon.ico')
-    link(rel="stylesheet", href="css/main.css")
+    link(rel="stylesheet", href="/css/main.css")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" )
     script(src='https://cdn.jsdelivr.net/npm/@glidejs/glide')
 
