--- a/jade/templates/product/_section-slider-product.jade
+++ b/jade/templates/product/_section-slider-product.jade
@@ -4,21 +4,21 @@ section.slider
       ul.glide__slides
         li.glide__slide
           picture
-            source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
-            img(src='img/slider-desktop.png')
+            source(srcset='/img/slider-mobile.png', media='(max-width: 800px)')
+            img(src='/img/slider-desktop.png')
 
         li.glide__slide
           picture
-            source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
-            img(src='img/slider-desktop.png')
+            source(srcset='/img/slider-mobile.png', media='(max-width: 800px)')
+            img(src='/img/slider-desktop.png')
         li.glide__slide
           picture
-            source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
-            img(src='img/slider-desktop.png')
+            source(srcset='/img/slider-mobile.png', media='(max-width: 800px)')
+            img(src='/img/slider-desktop.png')
         li.glide__slide
           picture
-            source(srcset='img/slider-mobile.png', media='(max-width: 800px)')
-            img(src='img/slider-desktop.png')
+            source(srcset='/img/slider-mobile.png', media='(max-width: 800px)')
+            img(src='/img/slider-desktop.png')
       .glide__bullets(data-glide-el='controls[nav]')
         button.glide__bullet(data-glide-dir='=0')
         button.glide__bullet(data-glide-dir='=1')
